==> gooddisplayepaper/E-paperExample_GoodDisplay/ESP32/GUI Code/A32-GDEW0102T4-GUI-20210719/A32-GDEW0102T4-GUI-20210719/GDEW0102T4/epdif.cpp <==
#include "epdif.h"
#include <SPI.h>

EpdIf::EpdIf() {
};

EpdIf::~EpdIf() {
};

void EpdIf::DigitalWrite(int pin, int value) {
    digitalWrite(pin, value);
}

int EpdIf::DigitalRead(int pin) {
    return digitalRead(pin);
}

void EpdIf::DelayMs(unsigned int delaytime) {
    delay(delaytime);
}
void EpdIf::SPI_Write(unsigned char value)                                    
{                                                           
    unsigned char i;  
    for(i=0; i<8; i++)   
    {
        digitalWrite(SCL_PIN, LOW);
       if(value & 0x80)
          digitalWrite(SDA_PIN, HIGH);
        else
         digitalWrite(SDA_PIN, LOW); 
        value = (value << 1); 
        digitalWrite(SCL_PIN, HIGH);
    }
}
void EpdIf::SpiTransfer(unsigned char data) {
    digitalWrite(CS_PIN, LOW);
    SPI_Write(data);
    digitalWrite(CS_PIN, HIGH);
}

int EpdIf::IfInit(void) {
    pinMode(CS_PIN, OUTPUT);
    pinMode(RST_PIN, OUTPUT);
    pinMode(DC_PIN, OUTPUT);
    pinMode(BUSY_PIN, INPUT); 

    pinMode(SCL_PIN, OUTPUT);
    pinMode(SDA_PIN, OUTPUT);
/*
    SPI.begin();
    SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));
    */
    return 0;
}
